# x64call

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  NtCreateThreadEx.cpp  NtCreateThreadExC.c  TargetHost.cpp  TestC.c  TestCPP.cpp
include/: x64call  x64call.h
src/: x64call.nasm
